# research-tools

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  backtest-batch-runner.py  edgar-sentinel-runner.py  pyproject.toml
attention-gap/: README.md  analyze.py  run_full_mapping.py  run_pageview_collection.py
climate-trends/: README.md  analyze.py  collect.py  collect_historical.py  collect_projections.py  test_e2e.py
covid-attention/: README.md  analyze.py  collect_and_identify.py  identify_topics.py
currency-contagion/: README.md  analyze.py  collect_and_analyze.py  collect_and_detect.py  currency_contagion_api.py  currency_contagion_canary.py  currency_contagion_contagion.py  currency_contagion_crisis.py  currency_contagion_preprocess.py  currency_contagion_report.py  currency_contagion_structural.py
earthquake-fx/: analyze.py
exoplanet-census/: README.md  collect_and_analyze.py
gbif-biodiversity/: README.md  collect.py
lib/: README.md  __init__.py  api_client.py  cache.py  formatting.py  stats.py  tables.py
ocean-warming/: README.md  analyze.py  collect.py
research-engine/: README.md  config.json  research.py  test_e2e.py  test_full_pipeline.py  test_pipeline.py
river-flow/: README.md  analyze.py  collect.py
sci-trends/: README.md  analyze.py  test_client.py
sea-level/: README.md  analyze.py  collect_data.py
seismicity/: README.md  collect_catalogs.py
solar-cycles/: README.md  analyze.py  run_task1.py
tests/: conftest.py  test_api_client.py  test_cache.py  test_climate_trends_client_migration.py  test_currency_contagion_client_migration.py  (+21 more)
(+139 files in other folders)
